--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -26,7 +26,7 @@
 .ItemList {
 
   position: relative;
-  width: 450px;
+  max-width: 450px;
   margin: 100px auto 0;
   padding: 10px;
   box-sizing: border-box;
